# workspacer

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
rpm/: workspacer.spec
src/: app.rs  buffer.rs  config.cpp  config.h  config.rs  main.cpp  main.rs  terminal.rs  utils.cpp  utils.h  utils.rs  workspaces.cpp  workspaces.h  workspaces.rs
src/terminal/: terminal.cpp  terminal.h
